--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4499,6 +4499,22 @@
                       android:host="com.android.settings.backup.transport" />
             </intent-filter>
         </activity>
+
+        <!-- AndromedaSettings -->
+        <activity android:name=".Settings$AndromedaSettingsActivity"
+                  android:label="@string/aosap_settings_title"
+                  android:icon="@drawable/ic_settings_aosap"
+                  android:exported="true"
+                  android:parentActivityName="com.android.settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.aosap.settings.AosapSettings" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/aosap_settings_summary"/>
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
